--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -40,7 +40,7 @@
 	var ctx = [[@{/}]];
 	var userName = [[${user.username}]];
 	var theme = [[${user.theme}]];
-	var avatar = ctx + "img/avatar/" + [[${user.avatar}]];
+	var avatar = ctx + "img/avatar/" + [[${user.avatarName}]];
 </script>
 <script data-th-src="@{js/app/index.js}"></script>
 </html>
