--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -39,7 +39,7 @@
                 <div class="form-group" style="display:inline-block">
                     <label>验证码</label>
                     <input type="text" name="code" style="width:50%; display:inline-block" />
-                    <img data-th-src="@{gifCode}" id="validateCodeImg" onclick="reloadCode()" style="display:inline-block" />
+                    <!--<img data-th-src="@{gifCode}" id="validateCodeImg" onclick="reloadCode()" style="display:inline-block" />-->
                 </div>
                 <div class="form-group" style="margin: 0px;">
                     <p>
@@ -73,7 +73,7 @@
             </div>
         </div>
     </div>
-    <div data-th-include="common/footer"></div>
+    <div th:replace="~{common/footer::#copyright}"></div>
 </body>
 <script th:inline="javascript">
 	var ctx = [[@{/}]];
