--- a/src/main/resources/templates/common/footer.html
+++ b/src/main/resources/templates/common/footer.html
@@ -1,3 +1,3 @@
-<footer class="footer hidden-xs-down">
+<footer class="footer hidden-xs-down" id="copyright">
     <p>© <a href="https://mrbird.cc" target="_blank">MrBird</a> All rights reserved.</p>
 </footer>
