--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -36,10 +36,10 @@
     </main>
     <div data-th-include="system/user/updatePassword"></div>
 </body>
-<script data-th-inline="javascript">
+<script th:inline="javascript">
 	var ctx = [[@{/}]];
-	var userName = [[${user.username}]];
-	var theme = [[${user.theme}]];
+	var userName = [[${user.userName}]];
+	var theme = '';//[[${user.theme}]];
 	var avatar = ctx + "img/avatar/" + [[${user.avatarName}]];
 </script>
 <script data-th-src="@{js/app/index.js}"></script>
