--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -73,6 +73,7 @@
             </div>
         </div>
     </div>
+    <!--页脚版权-->
     <div th:replace="~{common/footer::#copyright}"></div>
 </body>
 <script th:inline="javascript">
