--- a/src/main/resources/templates/common/main.html
+++ b/src/main/resources/templates/common/main.html
@@ -7,5 +7,6 @@
     <div class="main-content">
         <div class="card-block"> </div>
     </div>
-    <div data-th-include="common/footer"></div>
+    <!--<div data-th-include="common/footer"></div>-->
+    <div data-th-replace="common/footer"></div>
 </section>
