--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html xmlns:th="http://www.thymeleaf.org" xmlns:shiro="http://www.pollix.at/thymeleaf/shiro">
+<html xmlns:th="http://www.thymeleaf.org">
 
 <head>
     <meta charset="utf-8">
@@ -28,10 +28,13 @@
     <link rel="stylesheet" data-th-href="@{css/daterangepicker/daterangepicker.css}">
 </head>
 <body data-ma-theme="green">
+    <!--公共资源-->
     <div data-th-include="common/common"></div>
     <main class="main">
         <div data-th-include="common/header"></div>
+        <!--个人资料-->
         <div data-th-include="common/aside"></div>
+
         <div data-th-include="common/main"></div>
     </main>
     <div data-th-include="system/user/updatePassword"></div>
@@ -39,8 +42,8 @@
 <script th:inline="javascript">
 	var ctx = [[@{/}]];
 	var userName = [[${user.userName}]];
-	var theme = 'green';//[[${user.theme}]];
-	var avatar = ctx + "img/avatar/" + [[${user.avatarName}]];
+	var theme = 'green';
+	var avatar = ctx + "img/avatar/" + [[${user.avatarUrl}?: 'default.jpg']];
 </script>
 <script data-th-src="@{js/app/index.js}"></script>
 </html>
