--- a/src/main/resources/templates/common/common.html
+++ b/src/main/resources/templates/common/common.html
@@ -13,7 +13,7 @@
 <script data-th-src="@{js/jquery-validate/additional-methods.min.js}"></script>
 <script data-th-src="@{js/jquery-validate/messages_zh.min.js}"></script>
 
-<script data-th-src="@{/js/jsTree/jstree.js}"></script>
+<script data-th-src="@{js/jsTree/jstree.js}"></script>
 
 <script data-th-src="@{js/bootstrap-table/bootstrap-table.min.js}"></script>
 <script data-th-src="@{js/bootstrap-table/locale/bootstrap-table-zh-CN.js}"></script>
