--- a/src/main/resources/templates/system/user/user.html
+++ b/src/main/resources/templates/system/user/user.html
@@ -38,7 +38,7 @@
                                 <div class="input-group">
                                     <span class="input-group-addon"> 性别： </span>
                                     <div class="form-group">
-                                        <select class="form-control" name="ssex">
+                                        <select class="form-control" name="gender">
                                             <option value="" selected>所有</option>
                                             <option value="0">男</option>
                                             <option value="1">女</option>
@@ -50,7 +50,7 @@
                                 <div class="input-group">
                                     <span class="input-group-addon"> 状态： </span>
                                     <div class="form-group">
-                                        <select class="form-control" name="status">
+                                        <select class="form-control" name="locked">
                                             <option value="" selected>所有</option>
                                             <option value="0">锁定</option>
                                             <option value="1">有效</option>
@@ -61,6 +61,7 @@
                         </div>
                     </form>
                 </div>
+                <!--数据表单-->
                 <table id="userTable" data-mobile-responsive="true" class="mb-bootstrap-table text-nowrap"></table>
             </div>
         </div>
