--- a/src/main/resources/templates/system/user/userAdd.html
+++ b/src/main/resources/templates/system/user/userAdd.html
@@ -51,7 +51,7 @@
 					               	 手机：
 					            </span>
                                 <div class="form-group">
-                                    <input type="text" name="mobile" class="form-control">
+                                    <input type="text" name="phone" class="form-control">
                                 </div>
                             </div>
                         </div>
@@ -76,10 +76,10 @@
 					               	状态：
 					             </span>
                                 <div class="toggle-switch">
-                                    <input type="checkbox" name="status" checked class="toggle-switch__checkbox">
+                                    <input type="checkbox" name="locked" checked class="toggle-switch__checkbox">
                                     <i class="toggle-switch__helper"></i>
                                 </div>
-                                <span class="input-group-addon" id="status" style="margin-left: 10px;">
+                                <span class="input-group-addon" id="locked" style="margin-left: 10px;">
 	                                 	可用
 						             </span>
                             </div>
@@ -93,17 +93,17 @@
 					             </span>
                                 <div class="form-group">
                                     <label class="custom-control custom-radio">
-                                        <input name="ssex" type="radio" value="0" class="custom-control-input">
+                                        <input name="gender" type="radio" value="0" class="custom-control-input">
                                         <span class="custom-control-indicator"></span>
                                         <span class="custom-control-description">男</span>
                                     </label>
                                     <label class="custom-control custom-radio">
-                                        <input name="ssex" type="radio" value="1" class="custom-control-input">
+                                        <input name="gender" type="radio" value="1" class="custom-control-input">
                                         <span class="custom-control-indicator"></span>
                                         <span class="custom-control-description">女</span>
                                     </label>
                                     <label class="custom-control custom-radio">
-                                        <input name="ssex" type="radio" value="2" class="custom-control-input">
+                                        <input name="gender" type="radio" value="2" class="custom-control-input">
                                         <span class="custom-control-indicator"></span>
                                         <span class="custom-control-description">保密</span>
                                     </label>
