--- a/src/main/resources/templates/system/user/user.html
+++ b/src/main/resources/templates/system/user/user.html
@@ -24,6 +24,7 @@
                     </div>
                 </div>
                 <div id="data-table_filter" class="dataTables_filter">
+                    <!--搜索框-->
                     <form class="user-table-form">
                         <div class="row">
                             <div class="col-sm-3">
@@ -67,5 +68,5 @@
         </div>
     </div>
 </div>
-<script data-th-src="@{js/app/system/user/user.js}"></script>
-<script data-th-src="@{js/app/system/user/userEdit.js}"></script>
+<script data-th-src="@{/js/app/system/user/user.js}"></script>
+<script data-th-src="@{/js/app/system/user/userEdit.js}"></script>
