--- a/src/main/resources/templates/system/user/updatePassword.html
+++ b/src/main/resources/templates/system/user/updatePassword.html
@@ -13,7 +13,7 @@
 					               	旧密码：
 					            </span>
                                 <div class="form-group">
-                                    <input type="password" name="oldPassword" class="form-control">
+                                    <input type="password" name="originPwd" class="form-control">
                                 </div>
                             </div>
                         </div>
