--- a/src/main/resources/templates/common/aside.html
+++ b/src/main/resources/templates/common/aside.html
@@ -7,6 +7,8 @@
 .navigation a { color: #333; text-decoration: none; }
 .navigation a:hover { color: #06F; }
 </style>
+
+<!--左上侧个人信息-->
 <aside class="sidebar">
     <div class="scrollbar-inner">
         <div class="user">
@@ -19,6 +21,7 @@
             </div>
             <div class="dropdown-menu">
                 <a class="dropdown-item" href="#" id="user__profile">个人信息</a>
+
                 <a class="dropdown-item" href="#" data-toggle="modal" data-target="#update-password">修改密码</a>
             </div>
         </div>
