--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -34,7 +34,7 @@
                 </div>
                 <div class="form-group">
                     <label>密码</label>
-                    <input type="password" name="password" value="admin" autocomplete="off"/>
+                    <input type="password" name="password" value="admin123" autocomplete="off"/>
                 </div>
                 <div class="form-group" style="display:inline-block">
                     <label>验证码</label>
