--- a/src/main/resources/templates/system/user/userAdd.html
+++ b/src/main/resources/templates/system/user/userAdd.html
@@ -13,8 +13,7 @@
 					               	 用户名：
 					            </span>
                                 <div class="form-group">
-                                    <input type="text" name="username" class="form-control">
-                                    <input type="text" hidden name="oldusername" class="form-control">
+                                    <input type="text" name="userName" class="form-control">
                                     <input type="text" hidden name="userId" class="form-control">
                                 </div>
                             </div>
@@ -27,7 +26,7 @@
 					               	 密码：
 					            </span>
                                 <div class="form-group">
-                                    <input type="text" name="password" value="123456" readonly class="form-control">
+                                    <input type="text" name="userPassword" value="123456" readonly class="form-control">
                                 </div>
                             </div>
                         </div>
@@ -39,7 +38,7 @@
 					               	 邮箱：
 					            </span>
                                 <div class="form-group">
-                                    <input type="text" name="email" class="form-control">
+                                    <input type="text" name="mail" class="form-control">
                                 </div>
                             </div>
                         </div>
@@ -80,7 +79,7 @@
                                     <i class="toggle-switch__helper"></i>
                                 </div>
                                 <span class="input-group-addon" id="locked" style="margin-left: 10px;">
-	                                 	可用
+	                                 	锁定账户
 						             </span>
                             </div>
                         </div>
@@ -93,12 +92,12 @@
 					             </span>
                                 <div class="form-group">
                                     <label class="custom-control custom-radio">
-                                        <input name="gender" type="radio" value="0" class="custom-control-input">
+                                        <input name="gender" type="radio" value="1" class="custom-control-input">
                                         <span class="custom-control-indicator"></span>
                                         <span class="custom-control-description">男</span>
                                     </label>
                                     <label class="custom-control custom-radio">
-                                        <input name="gender" type="radio" value="1" class="custom-control-input">
+                                        <input name="gender" type="radio" value="0" class="custom-control-input">
                                         <span class="custom-control-indicator"></span>
                                         <span class="custom-control-description">女</span>
                                     </label>
