--- a/src/main/resources/templates/system/user/userAdd.html
+++ b/src/main/resources/templates/system/user/userAdd.html
@@ -5,6 +5,8 @@
                 <h3 class="modal-title pull-left" id="user-add-modal-title">新增用户</h3>
             </div>
             <div class="modal-body">
+
+                <!-- 用户新增/修改表单-->
                 <form id="user-add-form">
                     <div class="row">
                         <div class="col-sm-11">
@@ -78,7 +80,7 @@
                                     <input type="checkbox" name="locked" checked class="toggle-switch__checkbox">
                                     <i class="toggle-switch__helper"></i>
                                 </div>
-                                <span class="input-group-addon" id="locked" style="margin-left: 10px;">
+                                <span class="input-group-addon" id="lockedTip" style="margin-left: 10px;">
 	                                 	锁定账户
 						             </span>
                             </div>
