--- a/src/main/resources/templates/system/role/roleAdd.html
+++ b/src/main/resources/templates/system/role/roleAdd.html
@@ -10,11 +10,10 @@
                         <div class="col-sm-11">
                             <div class="input-group">
                                 <span class="input-group-addon">
-					               	角色名称：
+					               	角色关键字：
 					            </span>
                                 <div class="form-group">
-                                    <input type="text" name="roleName" class="form-control">
-                                    <input type="text" name="oldRoleName" hidden class="form-control">
+                                    <input type="text" name="roleKey" class="form-control">
                                     <input type="text" name="roleId" hidden class="form-control">
                                 </div>
                             </div>
@@ -24,10 +23,10 @@
                         <div class="col-sm-11">
                             <div class="input-group">
                                 <span class="input-group-addon">
-					               	 角色描述：
+					               	 角色名称：
 					            </span>
                                 <div class="form-group">
-                                    <input type="text" name="remark" class="form-control">
+                                    <input type="text" name="roleName" class="form-control">
                                 </div>
                             </div>
                         </div>
