--- a/src/main/resources/templates/system/user/userAdd.html
+++ b/src/main/resources/templates/system/user/userAdd.html
@@ -78,6 +78,7 @@
 					             </span>
                                 <div class="toggle-switch">
                                     <input type="checkbox" name="locked" checked class="toggle-switch__checkbox">
+                                    <input type="hidden" name="locked" id="locked">
                                     <i class="toggle-switch__helper"></i>
                                 </div>
                                 <span class="input-group-addon" id="lockedTip" style="margin-left: 10px;">
