--- a/src/main/resources/templates/common/aside.html
+++ b/src/main/resources/templates/common/aside.html
@@ -13,7 +13,7 @@
     <div class="scrollbar-inner">
         <div class="user">
             <div class="user__info" data-toggle="dropdown">
-                <img class="user__img">
+                <img class="user__img" alt="aside">
                 <div>
                     <div class="user__name" data-th-text="${user.userName}"></div>
                     <div class="user__email" data-th-utext="${user.mail}"></div>
