--- a/src/main/resources/templates/system/user/profile.html
+++ b/src/main/resources/templates/system/user/profile.html
@@ -1,19 +1,20 @@
 <style>
-.default_avatars_list {
-    display: inline-block;
-}
+    .default_avatars_list {
+        display: inline-block;
+    }
 
-.default_avatars_list img {
-    width: 12.3%;
-    display: inline;
-    margin: 1rem;
-    border-radius: 3px;
-    cursor: pointer;
-}
+    .default_avatars_list img {
+        width: 12.3%;
+        display: inline;
+        margin: 1rem;
+        border-radius: 3px;
+        cursor: pointer;
+    }
 </style>
+<!--个人信息-->
 <div class="card profile" style="padding: 1.2rem">
     <div class="profile__img">
-        <img alt="">
+        <img alt="profile">
         <a href="javascript:void(0)" class="zmdi zmdi-edit profile__img__edit" title="更换头像"></a>
     </div>
     <div class="actions" style="margin-right: 1rem">
@@ -26,8 +27,10 @@
             <li><i class="zmdi zmdi-male-female"></i> [[${user.gender} > 0 ? (${user.gender}==1 ? '男':'保密'):'女']]</li>
             <li><i class="zmdi zmdi-card-travel"></i> [[${#strings.defaultString(user.deptName,'无部门信息')}]]</li>
             <li><i class="zmdi zmdi-phone"></i> [[${#strings.defaultString(user.phone,'无电话信息')}]]</li>
-            <li id="profile__info_email"><i class="zmdi zmdi-email"></i><span> [[${#strings.defaultString(user.mail,'无邮箱信息')}]]</span></li>
-            <li><i class="zmdi zmdi-comment-text"></i> <span>[[${#strings.defaultString(user.description,'这和人很懒,什么也没留下')}]]</span></li>
+            <li id="profile__info_email"><i class="zmdi zmdi-email"></i><span> [[${#strings.defaultString(user.mail,'无邮箱信息')}]]</span>
+            </li>
+            <li><i class="zmdi zmdi-comment-text"></i> <span>[[${#strings.defaultString(user.description,'这和人很懒,什么也没留下')}]]</span>
+            </li>
         </ul>
     </div>
 </div>
@@ -151,7 +154,7 @@
             <div class="modal-body">
                 <form>
                     <div class="row default_avatars_list">
-                    	<img data-th-src="@{img/avatar/default.jpg}" title="点击更换！">
+                        <img data-th-src="@{img/avatar/default.jpg}" title="点击更换！">
                         <img data-th-src="@{img/avatar/20180414165920.jpg}" title="点击更换！">
                         <img data-th-src="@{img/avatar/20180414165927.jpg}" title="点击更换！">
                         <img data-th-src="@{img/avatar/20180414165754.jpg}" title="点击更换！">
@@ -173,14 +176,16 @@
                 </form>
             </div>
             <div class="modal-footer">
-                <button type="button" class="btn btn-secondary btn-close" id="close_update_avatar_button" data-dismiss="modal">关闭</button>
+                <button type="button" class="btn btn-secondary btn-close" id="close_update_avatar_button"
+                        data-dismiss="modal">关闭
+                </button>
                 <button class="btn-hide"></button>
             </div>
         </div>
     </div>
 </div>
 <script data-th-inline="javascript">
-var avatar = ctx + "img/avatar/" + [[${user.avatarUrl} ?:'default.jpg']];
-var userId = [[${user.userId}]];
+    var avatar = "img/avatar/" + [[${user.avatarUrl}]];
+    var userId = [[${user.userId}]];
 </script>
 <script data-th-src="@{js/app/system/user/profile.js}"></script>
