--- a/src/main/resources/templates/system/menu/menuAdd.html
+++ b/src/main/resources/templates/system/menu/menuAdd.html
@@ -28,12 +28,12 @@
 					             </span>
                                 <div class="form-group">
                                     <label class="custom-control custom-radio">
-                                        <input name="type" type="radio" value="0" checked class="custom-control-input">
+                                        <input name="type" type="radio" value="menu" checked class="custom-control-input">
                                         <span class="custom-control-indicator"></span>
                                         <span class="custom-control-description">菜单</span>
                                     </label>
                                     <label class="custom-control custom-radio">
-                                        <input name="type" type="radio" value="1" class="custom-control-input">
+                                        <input name="type" type="radio" value="button" class="custom-control-input">
                                         <span class="custom-control-indicator"></span>
                                         <span class="custom-control-description">按钮</span>
                                     </label>
@@ -63,7 +63,7 @@
 					            </span>
                                 <div class="form-group">
                                     <div id="menu-perms-list" class="form-control">
-                                        <input hidden id="menu-perms" type="text" name="perms" class="form-control">
+                                        <input hidden id="menu-perms" type="text" name="permission" class="form-control">
                                     </div>
                                 </div>
                             </div>
