修复菜单树

--- a/src/main/resources/templates/system/menu/menu.html
+++ b/src/main/resources/templates/system/menu/menu.html
@@ -76,8 +76,8 @@
 					            </span>
                                     <select class="form-control" name="type">
                                         <option value="" selected>所有</option>
-                                        <option value="0">菜单</option>
-                                        <option value="1">按钮</option>
+                                        <option value="menu">菜单</option>
+                                        <option value="button">按钮</option>
                                     </select>
                                 </div>
                             </div>
