--- a/src/main/resources/templates/system/menu/menuAdd.html
+++ b/src/main/resources/templates/system/menu/menuAdd.html
@@ -63,7 +63,7 @@
 					            </span>
                                 <div class="form-group">
                                     <div id="menu-perms-list" class="form-control">
-                                        <input hidden id="menu-perms" type="text" name="permission" class="form-control">
+                                        <input hidden id="menu-perms" type="text" name="perms" class="form-control">
                                     </div>
                                 </div>
                             </div>
