--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -1,83 +1,10 @@
 <!DOCTYPE html>
-<html xmlns:th="http://www.thymeleaf.org">
-
+<html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="edge" />
-    <title>SSM-Shiro权限管理系统</title>
-    <link rel="shortcut icon" type="image/png" th:href="@{/img/favicon.ico}" />
-    <link rel="stylesheet" th:href="@{css/login.css}" type="text/css">
-    <link rel="stylesheet" th:href="@{css/iCheck/minimal/green.css}" type="text/css">
-    <link rel="stylesheet" th:href="@{css/app.css}" type="text/css">
-    <!-- animate -->
-    <link rel="stylesheet" th:href="@{css/animate/animate.min.css}" type="text/css">
-    <script th:src="@{js/jquery.min.js}"></script>
-    <script th:src="@{js/iCheck/icheck.js}"></script>
-    <script th:src="@{js/bootstrap-notify/bootstrap-notify.min.js}"></script>
-    <script th:src="@{js/common.js}"></script>
+    <title>login</title>
 </head>
-<style>
-
-</style>
 <body>
-    <!-- Form-->
-    <div class="form">
-        <div class="form-toggle"></div>
-        <div class="form-panel one">
-            <div class="form-header">
-                <h1>账户登录</h1>
-            </div>
-            <div class="form-content">
-                <div class="form-group">
-                    <label>用户名</label>
-                    <input type="text" name="username" value="admin" autocomplete="off" />
-                </div>
-                <div class="form-group">
-                    <label>密码</label>
-                    <input type="password" name="password" value="admin123" autocomplete="off"/>
-                </div>
-                <div class="form-group" style="display:inline-block">
-                    <label>验证码</label>
-                    <input type="text" name="code" style="width:50%; display:inline-block" />
-                    <img data-th-src="@{/gifCode}" id="validateCodeImg" onclick="reloadCode()" style="display:inline-block" />
-                </div>
-                <div class="form-group" style="margin: 0px;">
-                    <p>
-                        <input type="checkbox" name="rememberMe" />&nbsp;&nbsp;记住我</p>
-                </div>
-                <div class="form-group">
-                    <button onclick="login()" id="loginButton">登录</button>
-                </div>
-            </div>
-        </div>
-        <div class="form-panel two">
-            <div class="form-header">
-                <h1>账户注册</h1>
-            </div>
-            <div class="form-content">
-                <div class="form-group">
-                    <label>用户名</label>
-                    <input type="text" name="userName"  placeholder="字母数字组合,不超过10位" autocomplete="off"/>
-                </div>
-                <div class="form-group">
-                    <label>密码</label>
-                    <input type="password" name="userPassword" placeholder="数字和字母组合,至少3位"/>
-                </div>
-                <div class="form-group">
-                    <label>确认密码</label>
-                    <input type="password" name="confirmPwd" />
-                </div>
-                <div class="form-group">
-                    <button onclick="register()">注册</button>
-                </div>
-            </div>
-        </div>
-    </div>
-    <!--页脚版权-->
-    <div th:replace="~{common/footer::#copyright}"></div>
+
 </body>
-<script th:inline="javascript">
-	var ctx = [[@{/}]];
-</script>
-<script data-th-src="@{js/app/login.js}"></script>
 </html>
